git branch learning

--- a/style.css
+++ b/style.css
@@ -4,5 +4,5 @@
     height: 300px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
 }
